[package]
name = "cmark-translation"
version = "0.1.0"
authors = ["CrLF0710"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.7.0"
pulldown-cmark-to-cmark = "5.0.0"
unicode-segmentation = "1.6.0"
structopt = "0.3.17"
thiserror = "1.0.20"
